src/static/styles/ui.scss
.ui-message {
    display: flex;
    padding: var(--spacings-xLarge);
    align-items: flex-start;

    animation: fadeIn 350ms;

    svg {
        width: var(--icon-size-normal);
        height: var(--icon-size-normal);
        margin-right: var(--spacings-medium);

        path {
            fill: currentColor;
        }
    }
}

@keyframes fadeIn {
    0% {
        opacity: 0.2;
        transform: translateY(-0.4rem);
    }
    30% {
        opacity: 0.4;
        transform: translateY(0);
    }
    100% {
        opacity: 1;
    }
}

.ui-message__content {
    flex: 1;
}
.ui-message--warning {
    background: var(--status-warning-main-backgroundColor);
    color: var(--status-warning-main-color);

    a {
        color: var(--status-warning-main-color);
    }
}
.ui-message--error {
    background: var(--status-error-main-backgroundColor);
    color: var(--status-error-main-color);

    a {
        color: var(--status-error-main-color);
    }
}
.ui-message--valid {
    background: var(--status-valid-main-backgroundColor);
    color: var(--status-valid-main-color);

    a {
        color: var(--status-valid-main-color);
    }
}
.ui-message--info {
    background: var(--status-info-main-backgroundColor);
    color: var(--status-info-main-color);

    a {
        color: var(--status-info-main-color);
    }
}
.ui-message--borderTop {
    border-top-left-radius: var(--border-radius-regular);
    border-top-right-radius: var(--border-radius-regular);
}
.ui-message--borderBottom {
    border-bottom-left-radius: var(--border-radius-regular);
    border-bottom-right-radius: var(--border-radius-regular);
}
.ui-message--marginTop {
    margin-top: var(--spacings-xLarge);
}
.ui-message--marginBottom {
    margin-bottom: var(--spacings-xLarge);
}

.ui-section {
    border-radius: var(--border-radius-regular);
    overflow: hidden;
    align-self: flex-start;
}
.ui-section--marginTop {
    margin-top: var(--spacings-xLarge);
}
.ui-section--marginBottom {
    margin-bottom: var(--spacings-xLarge);
}
.ui-section__paddedItem {
    padding: var(--spacings-xLarge);
    flex: 1;
    background: var(--colors-background_0-backgroundColor);
    color: var(--colors-background_0-color);
}
.ui-section__item {
    flex: 1;
    background: var(--colors-background_0-backgroundColor);
    color: var(--colors-background_0-color);
}
.ui-section__item--padded {
    padding: var(--spacings-xLarge);
}
.ui-section__item--horizontal {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
}
.ui-section__child:not(:last-child) {
    border-bottom: var(--border-width-slim) solid
        var(--colors-background_1-backgroundColor);
}
.ui-section__headerTitle {
    padding: 0;
    margin: 0;
    display: flex;
    align-items: center;

    img {
        display: block;
        margin-right: var(--spacings-medium);
    }
}
.ui-section__headerTitle--padded {
    padding: var(--spacings-xLarge);
}

.ui-section__itemWithIcon {
    display: flex;
    flex: 1;
    background: var(--colors-background_0-backgroundColor);
    color: var(--colors-background_0-color);
}
.ui-section__itemWithIcon__icon {
    padding: var(--spacings-xLarge);

    svg {
        display: block;
    }
    svg,
    path {
        fill: currentColor;
    }
}

// Style for ./src/Ui/LabelItem.elm
.ui-labelItem {
    display: block;
}
.ui-labelItem__label {
    display: block;
    margin-bottom: var(--spacings-medium);
}
.ui-labelItem--horizontal {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    align-items: baseline;

    .ui-labelItem__label {
        margin-bottom: 0;
    }
}
.ui-labelItem + .ui-labelItem {
    margin-top: var(--spacings-medium);
}
.ui-labelItem__label--compact {
    margin-bottom: var(--spacings-xSmall);
}
// End: Style for LabelItem.elm

.ui-group {
    width: 100%;
    overflow: hidden;
    background: var(--colors-background_0-backgroundColor);
    color: var(--colors-background_0-color);

    display: flex;
    align-items: stretch;
}
.ui-group__innerContainer {
    flex: 1;
}
.ui-group__icon {
    display: block;
    padding: var(--spacings-xLarge);

    svg {
        display: block;
    }
}
.ui-group__header {
    margin: 0;
    padding: 0;
}
.ui-group__content {
    overflow: hidden;
    max-height: 0;
    transition: max-height 200ms ease-in-out;
    position: relative;
}
.ui-group__item:not(:last-child) {
    border-bottom: var(--border-width-slim) solid
        var(--colors-background_1-backgroundColor);
}
.ui-group__content--open {
    max-height: 600px;
    overflow: auto;
}

.ui-group__headerButton {
    font-family: var(--font-main);
    background: none;
    display: flex;
    width: 100%;
    border: 0;
    justify-content: space-between;
    align-items: center;
    color: var(--text-colors-primary);
    text-align: left;
    cursor: pointer;

    transition: all 150ms ease-in-out;
    border: var(--border-width-medium) solid transparent;
    // Remove border from padding.
    padding: calc(var(--spacings-xLarge) - 2 * var(--border-width-medium));

    svg,
    path {
        fill: currentColor;
    }
}
.ui-group__headerButton:hover {
    background: var(--colors-background_2-backgroundColor);
    color: var(--colors-background_2-color);
}
.ui-group__headerButton:focus {
    outline: 0;
    border: var(--border-width-medium) solid
        var(--colors-primary_2-backgroundColor);
}
.ui-group__headerButton:active {
    background: var(--colors-background_3-backgroundColor);
    color: var(--colors-background_3-color);
}
.ui-group__headerButton__title {
    display: block;
    flex: 1;
    text-align: left;
}

.ui-ticketDetails {
    width: 100%;
    border-radius: var(--border-radius-regular);
    color: var(--colors-background_0-color);
    margin-bottom: var(--spacings-medium);

    --minWidthItems: 200px;
}
.ui-ticketDetails__header {
    margin: 0;
    padding: 0;
}
/* ... */

